# swift-deps-diagram

./: .gitignore  AGENTS.md  LICENSE  README.md  go.mod
.github/workflows/: ci.yml
cmd/swift-deps-diagram/: main.go  main_test.go  scaffold_test.go
docs/: README.md  architecture.md  capabilities.md  implementation-guide.md  progress.md  step-01-project-scaffold.md  step-02-cli-contract-and-entrypoint.md  step-03-swiftpm-dump-integration.md  step-04-manifest-models-and-decoder.md  step-05-graph-domain-model.md  step-06-graph-builder-rules.md  step-07-mermaid-renderer.md  step-08-dot-renderer.md  step-09-output-writer-and-exit-codes.md  step-10-tests-fixtures-and-acceptance.md  xcode-spm-support.md
examples/projects/: README.md
examples/projects/bazel-basic/app/: BUILD.bazel
internal/app/: run.go  run_test.go
internal/bazel/: load.go  load_test.go  model.go
internal/bazelgraph/: build.go  build_test.go
internal/errors/: errors.go  errors_test.go
internal/graph/: build.go  build_test.go  model.go  model_test.go
internal/graphviz/: png.go  png_test.go
internal/inputresolve/: resolve.go  resolve_test.go
internal/manifest/: decode.go  decode_test.go  model.go
internal/output/: write.go  write_test.go
internal/render/: dot.go  dot_test.go  mermaid.go  mermaid_test.go  terminal.go  terminal_test.go
internal/swiftpm/: dump.go  dump_test.go
internal/testutil/: fixtures.go
internal/tuist/: generate.go  generate_test.go
internal/xcodegraph/: build.go  build_test.go
internal/xcodeproj/: load.go  load_test.go
testdata/fixtures/: malformed.json  (+2 more)
(+15 files in other folders)
